# dependency_evaluator

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/sankar_5526/helloworld/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/adapters/: GridViewAdapter.kt
app/src/main/java/com/example/sankar_5526/helloworld/activities/: DummyActivity.kt  DummyWithoutCycleActivity.kt  HugeActivity.kt  HugeJVMHeap.kt  MainActivity.kt
app/src/main/java/model/: Cell.kt
app/src/main/res/drawable/: back_arrow_green.xml  cell_header_shape.xml  cell_selector.xml  cell_shape.xml  ic_done_black_24dp.xml
app/src/main/res/layout/: activity_main.xml  dummy_layout.xml  gridview_layout.xml  sheet_activity.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/example/sankar_5526/helloworld/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
